# specstress

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
docs/hackathon/: 2026-05-23-tinker-migration-and-eval.md
docs/plans/: 2026-05-22-specstress-mvp.md
eval-results/20260523T190429Z/: sanitize.md  scoreboard.md  sort.md  withdraw.md
eval-results/20260523T191216Z/: jwt.md  money.md  sanitize.md  scoreboard.md  sort.md  withdraw.md
examples/: __init__.py
examples/jwt/: case.py
examples/money/: __init__.py  case.py
examples/sanitize/: case.py  intent.md
examples/sort/: case.py  intent.md
examples/withdraw/: __init__.py  case.py  intent.md
reports/: sample_report.md
scripts/: run_eval.py
specstress/: api.py  eval.py  llm.py  models.py  reports.py  runner.py  scorer.py
tests/: test_api.py  test_eval.py  test_examples_jwt.py  test_examples_money.py  test_examples_registry.py  test_examples_sanitize.py  test_examples_sort.py  test_examples_withdraw.py  test_llm.py  test_models.py  test_reports.py  test_runner.py  test_scorer.py
